@@ -22,8 +22,7 @@
 
 package io.crate.expression.symbol;
 
-import com.google.common.collect.ImmutableList;
-
+import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -45,7 +44,7 @@ public abstract class FunctionCopyVisitor<C> extends SymbolVisitor<C, Symbol> {
         switch (args.size()) {
             // specialized functions to avoid allocations for common cases
             case 0:
-                return func;
+                return zeroArg(func, context);
 
             case 1:
                 return oneArg(func, context);
@@ -60,15 +59,24 @@ public abstract class FunctionCopyVisitor<C> extends SymbolVisitor<C, Symbol> {
 
     private Function manyArgs(Function func, C context) {
         List<Symbol> args = func.arguments();
-        List<Symbol> newArgs = new ArrayList<>(args.size());
+        ArrayList<Symbol> newArgs = new ArrayList<>(args.size());
+
+        Symbol filter = func.filter();
+        Symbol newFilter = processNullable(filter, context);
+
         boolean changed = false;
         for (Symbol arg : args) {
-            Symbol newArg = requireNonNull(process(arg, context), "function arguments must never be NULL");
+            Symbol newArg = requireNonNull(
+                process(arg, context),
+                "function arguments must never be NULL"
+            );
             changed |= arg != newArg;
             newArgs.add(newArg);
         }
+        changed |= filter != newFilter;
+
         if (changed) {
-            return new Function(func.info(), newArgs);
+            return new Function(func.info(), newArgs, newFilter);
         }
         return func;
     }
@@ -81,10 +89,28 @@ public abstract class FunctionCopyVisitor<C> extends SymbolVisitor<C, Symbol> {
         Symbol arg2 = func.arguments().get(1);
         Symbol newArg2 = requireNonNull(process(arg2, context), "function arguments must never be NULL");
 
-        if (arg1 == newArg1 && arg2 == newArg2) {
+        Symbol filter = func.filter();
+        Symbol newFilter = processNullable(filter, context);
+
+        if (arg1 == newArg1 && arg2 == newArg2 && filter == newFilter) {
             return func;
         }
-        return new Function(func.info(), ImmutableList.of(newArg1, newArg2));
+        return new Function(func.info(), List.of(newArg1, newArg2), newFilter);
+    }
+
+    private Function zeroArg(Function func, C context) {
+        assert func.arguments().size() == 0 : "size of arguments must be zero";
+
+        Symbol filter = func.filter();
+        if (filter == null) {
+            return func;
+        }
+
+        Symbol newFilter = process(filter, context);
+        if (filter == newFilter) {
+            return func;
+        }
+        return new Function(func.info(), List.of(), newFilter);
     }
 
     private Function oneArg(Function func, C context) {
@@ -92,10 +118,21 @@ public abstract class FunctionCopyVisitor<C> extends SymbolVisitor<C, Symbol> {
         Symbol arg = func.arguments().get(0);
         Symbol newArg = requireNonNull(process(arg, context), "function arguments must never be NULL");
 
-        if (arg == newArg) {
+        Symbol filter = func.filter();
+        Symbol newFilter = processNullable(filter, context);
+
+        if (arg == newArg && filter == newFilter) {
             return func;
         }
-        return new Function(func.info(), ImmutableList.of(newArg));
+        return new Function(func.info(), List.of(newArg), newFilter);
+    }
+
+    @Nullable
+    private Symbol processNullable(@Nullable Symbol symbol, C context) {
+        if (symbol != null) {
+            return symbol.accept(this, context);
+        }
+        return null;
     }
 
     @Override
@@ -109,6 +146,7 @@ public abstract class FunctionCopyVisitor<C> extends SymbolVisitor<C, Symbol> {
         return new WindowFunction(
             processedFunction.info(),
             processedFunction.arguments(),
+            processNullable(windowFunction.filter(), context),
             windowFunction.windowDefinition().map(s -> process(s, context))
         );
     }
